--- a/app/widgets/gantt/gantt-widget.html
+++ b/app/widgets/gantt/gantt-widget.html
@@ -1,4 +1,4 @@
-<div layout="vertical" class="" style="box-shadow: none;" ng-controller="GanttWidgetCtrl as vm">
+<div layout="column" class="" style="box-shadow: none;" ng-controller="GanttWidgetCtrl as vm">
 
     <md-toolbar class="widget-toolbar">
         <!--<h3>Current Schedule Blocks</h3>-->
