--- a/app/video/video.html
+++ b/app/video/video.html
@@ -1,8 +1,8 @@
 <div style="position: relative;" class="view-container-full" ng-controller="VideoCtrl as vm" ng-mouseenter="vm.showVideoControls = true" ng-mouseleave="vm.showVideoControls = false">
     <img width="100%" alt="Could not load video image..." src="http://192.168.10.68:8081/"/>
 
-    <div md-theme="{{themePrimaryButtons}}" ng-show="vm.showVideoControls" class="video-pan-controls" layout="horizontal" md-theme-watch="true">
-        <div layout="horizontal" layout-align="center end">
+    <div md-theme="{{themePrimaryButtons}}" ng-show="vm.showVideoControls" class="video-pan-controls" layout="row" md-theme-watch="true">
+        <div layout="row" layout-align="center end">
             <md-slider style="background: transparent; width: 250px;" flex min="0" max="100" ng-model="vm.zoom" aria-label="Zoom Slider">
             </md-slider>
             <md-button ng-click="vm.rememberPos()" aria-label="Remember Current Position" class="md-fab md-button-fab-small md-primary">
@@ -19,7 +19,7 @@
             </md-button>
         </div>
 
-        <div layout="vertical" layout-align="center center">
+        <div layout="column" layout-align="center center">
             <md-button ng-click="vm.tiltFarUp()" aria-label="Tilt Far Up" class="md-fab md-button-fab-small md-primary">
                 <span style="transform:rotate(90deg);" class="fa fa-step-backward md-fab-fa-icon-small"></span>
                 <md-tooltip>Tilt Far Up</md-tooltip>
@@ -27,7 +27,7 @@
             <md-button ng-click="vm.tiltUp()" aria-label="Tilt Up" class="md-fab md-button-fab-small md-primary">
                 <span class="fa fa-caret-up md-fab-fa-icon-small"></span>
             </md-button>
-            <div layout="horizontal" style="width: 180px;">
+            <div layout="row" style="width: 180px;">
                 <md-button ng-click="vm.panFarLeft()" aria-label="Pan Far Left" class="md-fab md-button-fab-small md-primary">
                     <span class="fa fa-step-backward md-fab-fa-icon-small"></span>
                     <md-tooltip>Pan Far Left</md-tooltip>
