--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
        ng-class="{ 'fa-caret-square-o-up': vm.showNavbar,  'fa-caret-square-o-down': !vm.showNavbar}"></i>
 </button>
 
-<div style="pointer-events: none;" alarm></div>
+<div alarms-notifier></div>
 
 </body>
 </html>
